// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design Systems/Templates/BlogPosts All Articles 1`] = `
<div
  className="content contentWidth-page css-bcu02z-styles-styles"
>
  <div
    className="latestPosts"
  >
    <div
      className="css-11k97zu-styles"
    >
      <span
        className=" css-ihkpod-styles-styles"
      >
        <a
          className="css-14ymbip-styles-styles"
          href="/"
          hrefLang="en-us"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Spiral Home
        </a>
        <span
          className="icon icon-angle-right"
        />
      </span>
      <span
        className="is-active css-ihkpod-styles-styles"
      >
        <a
          className="css-14ymbip-styles-styles"
          href="/blog"
          hrefLang="en-us"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <span>
            <span
              className="hide-small pre"
            >
              Blog - 
            </span>
            <span>
              All Articles
            </span>
          </span>
        </a>
        <span
          className="icon icon-angle-right"
        />
      </span>
    </div>
  </div>
  <div
    className="signupHero"
  >
    <div
      className="css-oqzgca-styles"
    >
      <div
        className="css-1e3e79w-styles-styles"
      >
        <h1
          className="title hide-gt-small"
        >
          Stories about 
          <div>
            using your money
          </div>
           
          <div>
            for good
          </div>
        </h1>
        <h1
          className="title hide-small"
        >
          <div>
            Stories about using 
          </div>
          <div>
            your money for good
          </div>
        </h1>
        <div
          className="newsletterForm"
        />
      </div>
    </div>
  </div>
  <h1
    className="title"
  >
    All Articles
  </h1>
  <div
    className="css-gomf7z-posts"
  >
    <div
      className="css-184mvar-post"
    >
      <div
        className="css-1grkgkk-image"
      >
        <div
          className="css-pljv6f-styles-styles"
        >
          <a
            className=" css-12jtorb-styles"
            href="/blog/the_article_title"
            hrefLang="en-us"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            <span
              className=" PictureAtom css-cy5t7d-styles-styles"
            >
              <picture>
                <source
                  media="(max-width:500px)"
                  srcSet="https://res.cloudinary.com/spiral/images/g_auto,w_500,h_333,c_fill/g_auto,w_1200,h_800,c_fill/f_auto,q_auto/v1624059624/wordpress-uploads/Screen-Shot-2021-06-18-at-4.34.36-PM/Screen-Shot-2021-06-18-at-4.34.36-PM.webp"
                  type="image/webp"
                />
                <source
                  media="(min-width:501px)"
                  srcSet="https://res.cloudinary.com/spiral/images/g_auto,w_1200,h_800,c_fill/g_auto,w_1200,h_800,c_fill/f_auto,q_auto/v1624059624/wordpress-uploads/Screen-Shot-2021-06-18-at-4.34.36-PM/Screen-Shot-2021-06-18-at-4.34.36-PM.webp"
                  type="image/webp"
                />
                <source
                  media="(min-width:501px)"
                  srcSet="https://res.cloudinary.com/spiral/images/g_auto,w_1200,h_800,c_fill/g_auto,w_1200,h_800,c_fill/f_auto,q_auto/v1624059624/wordpress-uploads/Screen-Shot-2021-06-18-at-4.34.36-PM/Screen-Shot-2021-06-18-at-4.34.36-PM.png"
                  type="image/png"
                />
                <img
                  alt="image"
                  height={400}
                  loading="lazy"
                  src="https://res.cloudinary.com/spiral/images/g_auto,w_500,h_333,c_fill/g_auto,w_1200,h_800,c_fill/f_auto,q_auto/v1624059624/wordpress-uploads/Screen-Shot-2021-06-18-at-4.34.36-PM/Screen-Shot-2021-06-18-at-4.34.36-PM.png"
                  width={600}
                />
              </picture>
            </span>
          </a>
          <div
            className="categoryTags isSmall"
          >
            <a
              className=" css-12jtorb-styles"
              href="/blog/category/dogood"
              hrefLang="en-us"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Do Good
            </a>
            <a
              className=" css-12jtorb-styles"
              href="/blog/category/ethicalbanking"
              hrefLang="en-us"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Ethical Banking
            </a>
          </div>
        </div>
      </div>
      <h3>
        <a
          className=" css-12jtorb-styles"
          href="/blog/the_article_title"
          hrefLang="en-us"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "The Article Title",
              }
            }
          />
        </a>
      </h3>
      <div
        className="excerpt"
        dangerouslySetInnerHTML={
          Object {
            "__html": "This is a short description of the content. <b>It sometimes contains HTML.</b> It could just be a cut off beginning of the full text, or a custom written couple lines of text.",
          }
        }
      />
      <p
        className="more"
      >
        <a
          className="color-primary css-12jtorb-styles"
          href="/blog/the_article_title"
          hrefLang="en-us"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Continue reading...
        </a>
      </p>
    </div>
    <div
      className="css-184mvar-post"
    >
      <div
        className="css-1grkgkk-image"
      >
        <div
          className="css-pljv6f-styles-styles"
        >
          <a
            className=" css-12jtorb-styles"
            href="/blog/another_article"
            hrefLang="en-us"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            <span
              className=" PictureAtom css-cy5t7d-styles-styles"
            >
              <picture>
                <source
                  media="(max-width:500px)"
                  srcSet="https://res.cloudinary.com/spiral/images/g_auto,w_500,h_333,c_fill/g_auto,w_1200,h_800,c_fill/f_auto,q_auto/v1624303199/wordpress-uploads/Highlights_MeetStory_1/Highlights_MeetStory_1.webp"
                  type="image/webp"
                />
                <source
                  media="(min-width:501px)"
                  srcSet="https://res.cloudinary.com/spiral/images/g_auto,w_1200,h_800,c_fill/g_auto,w_1200,h_800,c_fill/f_auto,q_auto/v1624303199/wordpress-uploads/Highlights_MeetStory_1/Highlights_MeetStory_1.webp"
                  type="image/webp"
                />
                <source
                  media="(min-width:501px)"
                  srcSet="https://res.cloudinary.com/spiral/images/g_auto,w_1200,h_800,c_fill/g_auto,w_1200,h_800,c_fill/f_auto,q_auto/v1624303199/wordpress-uploads/Highlights_MeetStory_1/Highlights_MeetStory_1.jpeg"
                  type="image/jpeg"
                />
                <img
                  alt="image"
                  height={400}
                  loading="lazy"
                  src="https://res.cloudinary.com/spiral/images/g_auto,w_500,h_333,c_fill/g_auto,w_1200,h_800,c_fill/f_auto,q_auto/v1624303199/wordpress-uploads/Highlights_MeetStory_1/Highlights_MeetStory_1.jpeg"
                  width={600}
                />
              </picture>
            </span>
          </a>
          <div
            className="categoryTags isSmall"
          >
            <a
              className=" css-12jtorb-styles"
              href="/blog/category/dogood"
              hrefLang="en-us"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Do Good
            </a>
            <a
              className=" css-12jtorb-styles"
              href="/blog/category/ethicalbanking"
              hrefLang="en-us"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Ethical Banking
            </a>
          </div>
        </div>
      </div>
      <h3>
        <a
          className=" css-12jtorb-styles"
          href="/blog/another_article"
          hrefLang="en-us"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "Another Blog Article",
              }
            }
          />
        </a>
      </h3>
      <div
        className="excerpt"
        dangerouslySetInnerHTML={
          Object {
            "__html": "This is another short description of the content. <b>It sometimes contains HTML.</b> It could just be a cut off beginning of the full text, or a custom written couple lines of text.",
          }
        }
      />
      <p
        className="more"
      >
        <a
          className="color-primary css-12jtorb-styles"
          href="/blog/another_article"
          hrefLang="en-us"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Continue reading...
        </a>
      </p>
    </div>
  </div>
  <div
    className="css-i3wwl2-styles-styles"
  >
    <div
      className="css-12iuso9-spacer"
    />
    <hr />
    <section
      className="email"
    >
      <h4>
        Enjoy more stories about using your money for good
      </h4>
    </section>
  </div>
</div>
`;

exports[`Storyshots Design Systems/Templates/BlogPosts Specific Category 1`] = `
<div
  className="content contentWidth-page css-bcu02z-styles-styles"
>
  <div
    className="latestPosts"
  >
    <div
      className="css-11k97zu-styles"
    >
      <span
        className=" css-ihkpod-styles-styles"
      >
        <a
          className="css-14ymbip-styles-styles"
          href="/"
          hrefLang="en-us"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Spiral Home
        </a>
        <span
          className="icon icon-angle-right"
        />
      </span>
      <span
        className=" css-ihkpod-styles-styles"
      >
        <a
          className="css-14ymbip-styles-styles"
          href="/blog"
          hrefLang="en-us"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <span>
            <span
              className="hide-small pre"
            >
              Blog - 
            </span>
            <span>
              All Articles
            </span>
          </span>
        </a>
        <span
          className="icon icon-angle-right"
        />
      </span>
      <span
        className="is-active css-ihkpod-styles-styles"
      >
        <a
          className="css-14ymbip-styles-styles"
          href="/blog/category/dogood"
          hrefLang="en-us"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Do Good
        </a>
        <span
          className="icon icon-angle-right"
        />
      </span>
    </div>
  </div>
  <h1
    className="title"
  >
    <span>
      Category "
      Do Good
      "
    </span>
  </h1>
  <div
    className="css-gomf7z-posts"
  >
    <div
      className="css-184mvar-post"
    >
      <div
        className="css-1grkgkk-image"
      >
        <div
          className="css-pljv6f-styles-styles"
        >
          <a
            className=" css-12jtorb-styles"
            href="/blog/the_article_title"
            hrefLang="en-us"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            <span
              className=" PictureAtom css-cy5t7d-styles-styles"
            >
              <picture>
                <source
                  media="(max-width:500px)"
                  srcSet="https://res.cloudinary.com/spiral/images/g_auto,w_500,h_333,c_fill/g_auto,w_1200,h_800,c_fill/f_auto,q_auto/v1624059624/wordpress-uploads/Screen-Shot-2021-06-18-at-4.34.36-PM/Screen-Shot-2021-06-18-at-4.34.36-PM.webp"
                  type="image/webp"
                />
                <source
                  media="(min-width:501px)"
                  srcSet="https://res.cloudinary.com/spiral/images/g_auto,w_1200,h_800,c_fill/g_auto,w_1200,h_800,c_fill/f_auto,q_auto/v1624059624/wordpress-uploads/Screen-Shot-2021-06-18-at-4.34.36-PM/Screen-Shot-2021-06-18-at-4.34.36-PM.webp"
                  type="image/webp"
                />
                <source
                  media="(min-width:501px)"
                  srcSet="https://res.cloudinary.com/spiral/images/g_auto,w_1200,h_800,c_fill/g_auto,w_1200,h_800,c_fill/f_auto,q_auto/v1624059624/wordpress-uploads/Screen-Shot-2021-06-18-at-4.34.36-PM/Screen-Shot-2021-06-18-at-4.34.36-PM.png"
                  type="image/png"
                />
                <img
                  alt="image"
                  height={400}
                  loading="lazy"
                  src="https://res.cloudinary.com/spiral/images/g_auto,w_500,h_333,c_fill/g_auto,w_1200,h_800,c_fill/f_auto,q_auto/v1624059624/wordpress-uploads/Screen-Shot-2021-06-18-at-4.34.36-PM/Screen-Shot-2021-06-18-at-4.34.36-PM.png"
                  width={600}
                />
              </picture>
            </span>
          </a>
          <div
            className="categoryTags isSmall"
          >
            <a
              className=" css-12jtorb-styles"
              href="/blog/category/dogood"
              hrefLang="en-us"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Do Good
            </a>
            <a
              className=" css-12jtorb-styles"
              href="/blog/category/ethicalbanking"
              hrefLang="en-us"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Ethical Banking
            </a>
          </div>
        </div>
      </div>
      <h3>
        <a
          className=" css-12jtorb-styles"
          href="/blog/the_article_title"
          hrefLang="en-us"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "The Article Title",
              }
            }
          />
        </a>
      </h3>
      <div
        className="excerpt"
        dangerouslySetInnerHTML={
          Object {
            "__html": "This is a short description of the content. <b>It sometimes contains HTML.</b> It could just be a cut off beginning of the full text, or a custom written couple lines of text.",
          }
        }
      />
      <p
        className="more"
      >
        <a
          className="color-primary css-12jtorb-styles"
          href="/blog/the_article_title"
          hrefLang="en-us"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Continue reading...
        </a>
      </p>
    </div>
    <div
      className="css-184mvar-post"
    >
      <div
        className="css-1grkgkk-image"
      >
        <div
          className="css-pljv6f-styles-styles"
        >
          <a
            className=" css-12jtorb-styles"
            href="/blog/another_article"
            hrefLang="en-us"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            <span
              className=" PictureAtom css-cy5t7d-styles-styles"
            >
              <picture>
                <source
                  media="(max-width:500px)"
                  srcSet="https://res.cloudinary.com/spiral/images/g_auto,w_500,h_333,c_fill/g_auto,w_1200,h_800,c_fill/f_auto,q_auto/v1624303199/wordpress-uploads/Highlights_MeetStory_1/Highlights_MeetStory_1.webp"
                  type="image/webp"
                />
                <source
                  media="(min-width:501px)"
                  srcSet="https://res.cloudinary.com/spiral/images/g_auto,w_1200,h_800,c_fill/g_auto,w_1200,h_800,c_fill/f_auto,q_auto/v1624303199/wordpress-uploads/Highlights_MeetStory_1/Highlights_MeetStory_1.webp"
                  type="image/webp"
                />
                <source
                  media="(min-width:501px)"
                  srcSet="https://res.cloudinary.com/spiral/images/g_auto,w_1200,h_800,c_fill/g_auto,w_1200,h_800,c_fill/f_auto,q_auto/v1624303199/wordpress-uploads/Highlights_MeetStory_1/Highlights_MeetStory_1.jpeg"
                  type="image/jpeg"
                />
                <img
                  alt="image"
                  height={400}
                  loading="lazy"
                  src="https://res.cloudinary.com/spiral/images/g_auto,w_500,h_333,c_fill/g_auto,w_1200,h_800,c_fill/f_auto,q_auto/v1624303199/wordpress-uploads/Highlights_MeetStory_1/Highlights_MeetStory_1.jpeg"
                  width={600}
                />
              </picture>
            </span>
          </a>
          <div
            className="categoryTags isSmall"
          >
            <a
              className=" css-12jtorb-styles"
              href="/blog/category/dogood"
              hrefLang="en-us"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Do Good
            </a>
            <a
              className=" css-12jtorb-styles"
              href="/blog/category/ethicalbanking"
              hrefLang="en-us"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Ethical Banking
            </a>
          </div>
        </div>
      </div>
      <h3>
        <a
          className=" css-12jtorb-styles"
          href="/blog/another_article"
          hrefLang="en-us"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "Another Blog Article",
              }
            }
          />
        </a>
      </h3>
      <div
        className="excerpt"
        dangerouslySetInnerHTML={
          Object {
            "__html": "This is another short description of the content. <b>It sometimes contains HTML.</b> It could just be a cut off beginning of the full text, or a custom written couple lines of text.",
          }
        }
      />
      <p
        className="more"
      >
        <a
          className="color-primary css-12jtorb-styles"
          href="/blog/another_article"
          hrefLang="en-us"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Continue reading...
        </a>
      </p>
    </div>
  </div>
  <div
    className="css-i3wwl2-styles-styles"
  >
    <div
      className="css-12iuso9-spacer"
    />
    <hr />
    <section
      className="email"
    >
      <h4>
        Enjoy more stories about using your money for good
      </h4>
    </section>
  </div>
</div>
`;
